@@ -329,6 +329,7 @@ AC_CHECK_TYPE([sig_atomic_t],,[dnl
 AC_FUNC_FORK
 AC_CHECK_FUNCS_ONCE([
   fchmod
+  ftruncate
   getcwd
   getpwuid
   getuid
