@@ -1,3 +1,9 @@
+2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Move `ftruncate' check to configure.in.
+
+	* configure.in (ftruncate): Add to `AC_CHECK_FUNCS_ONCE'.
+
 2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Move `vfork', `fork' checks to configure.in.
